--- a/pyproject.toml
+++ b/pyproject.toml
@@ -281,7 +281,7 @@ indent-after-paren = 4
 indent-string = "    "
 
 # Maximum number of characters on a single line.
-max-line-length = 120
+max-line-length = 127
 
 # Maximum number of lines in a module.
 max-module-lines = 1000
@@ -348,7 +348,19 @@ confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFIN
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-symbolic-message-instead"]
+disable = ["raw-checker-failed",
+    "bad-inline-option",
+    "locally-disabled",
+    "file-ignored",
+    "suppressed-message",
+    "useless-suppression",
+    "deprecated-pragma",
+    "use-symbolic-message-instead",
+    "W0511", # No comments with todo or fixme allowed (fixme)
+    "R0903", # Too few public methods (need at least 2) (too-few-public-methods)
+    "R0913", # Too many arguments (at most 5 allowed) (too-many-arguments)
+    "R0904", # Too many public methods (at most 20 allowed) (too-many-public-methods)
+]
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
