--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,23 +46,17 @@ jobs:
     - uses: actions/checkout@v3
     - name: TEST
       run: |
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
-        echo $TEST
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
+        echo ${{ secrets.TEST }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
