--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      env:
+        TEST: ${{ secrets.SuperSecret }}
+    - name: TEST
+      run: |
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
+        echo "$TEST"
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -44,19 +60,6 @@ jobs:
     needs: [build]
     steps:
     - uses: actions/checkout@v3
-    - name: TEST
-      run: |
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
-        echo ${{ secrets.TEST }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
