--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,10 +1,7 @@
 name: Python application
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  push
 
 permissions:
   contents: read
