--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,22 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: TEST
-      env:
-        TEST: ${{ secrets.TEST }}
-      run: |
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
-        echo "$TEST"
+    - uses: oNaiPs/secrets-to-env-action@v1
+      with:
+        secrets: ${{ toJSON(secrets) }}
+#    - name: TEST
+#      env:
+#        TEST: ${{ secrets.TEST }}
+#      run: |
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
+#        echo "$TEST"
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -57,6 +60,9 @@ jobs:
     needs: [build]
     steps:
     - uses: actions/checkout@v3
+    - uses: oNaiPs/secrets-to-env-action@v1
+      with:
+        secrets: ${{ toJSON(secrets) }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
