--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Check for syntax errors or undefined names
       run: |
@@ -33,10 +32,11 @@ jobs:
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
     - name: Lint with pylint
       run: |
-        pylint bot.py
+        pylint ComplementsBot/bot.py
     - name: Typecheck with mypy
       run: |
         mypy *.py
+        mypy -p ComplementsBot
 
   test:
     timeout-minutes: 30
@@ -44,13 +44,12 @@ jobs:
     needs: [build]
     steps:
     - uses: actions/checkout@v3
-    - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as environment variables
+    - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
       with:
         secrets: ${{ toJSON(secrets) }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
