--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,6 +56,10 @@ jobs:
       with:
         python-version: "3.10"
     - name: Test with pytest
+      with:
+        name: ".firebase_config.json"
+        json: ${{ secrets.$FIREBASE_CONFIG }}
+        dir: "./"
       run: |
-        echo "$FIREBASE_CONFIG" > .firebase_config.json
+#        echo "$FIREBASE_CONFIG" > .firebase_config.json
         pytest
