--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as environment variables
       with:
         secrets: ${{ toJSON(secrets) }}
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -23,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Check for syntax errors or undefined names
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -36,7 +38,7 @@ jobs:
     - name: Typecheck with mypy
       run: |
         mypy *.py
-        mypy -p ComplementsBot
+        mypy --package ComplementsBot  # typecheck the package 'ComplementsBot'
 
   test:
     timeout-minutes: 30
@@ -47,14 +49,16 @@ jobs:
     - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
       with:
         secrets: ${{ toJSON(secrets) }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Test with pytest
       run: |
         echo "$FIREBASE_CONFIG" > .firebase_config.json
