--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,59 @@
-twitchio~=2.5.0
-firebase_admin~=6.0.1
-pylint~=2.15.9
-flake8~=6.0.0
-mypy~=0.991
-pytest~=7.2.0
+-i https://pypi.org/simple
+aiohttp==3.8.3 ; python_version >= '3.6'
+aiosignal==1.3.1 ; python_version >= '3.7'
+astroid==2.13.2 ; python_full_version >= '3.7.2'
+async-timeout==4.0.2 ; python_version >= '3.6'
+attrs==22.2.0 ; python_version >= '3.6'
+cachecontrol==0.12.11 ; python_version >= '3.6'
+cachetools==5.2.1 ; python_version ~= '3.7'
+certifi==2022.12.7 ; python_version >= '3.6'
+cffi==1.15.1
+charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
+cryptography==39.0.0
+dill==0.3.6 ; python_version < '3.11'
+firebase-admin==6.0.1
+flake8==6.0.0
+frozenlist==1.3.3 ; python_version >= '3.7'
+google-api-core[grpc]==2.11.0 ; platform_python_implementation != 'PyPy'
+google-api-python-client==2.72.0 ; python_version >= '3.7'
+google-auth==2.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2 ; python_version >= '3.7'
+google-cloud-firestore==2.8.0 ; platform_python_implementation != 'PyPy'
+google-cloud-storage==2.7.0 ; python_version >= '3.7'
+google-crc32c==1.5.0 ; python_version >= '3.7'
+google-resumable-media==2.4.0 ; python_version >= '3.7'
+googleapis-common-protos==1.58.0 ; python_version >= '3.7'
+grpcio==1.51.1
+grpcio-status==1.51.1
+httplib2==0.21.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+idna==3.4 ; python_version >= '3.5'
+iso8601==1.1.0 ; python_full_version >= '3.6.2' and python_version < '4.0'
+isort==5.11.4 ; python_full_version >= '3.7.0'
+lazy-object-proxy==1.9.0 ; python_version >= '3.7'
+mccabe==0.7.0 ; python_version >= '3.6'
+msgpack==1.0.4
+multidict==6.0.4 ; python_version >= '3.7'
+platformdirs==2.6.2 ; python_version >= '3.7'
+proto-plus==1.22.2 ; python_version >= '3.6'
+protobuf==4.21.12 ; python_version >= '3.7'
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.10.0 ; python_version >= '3.6'
+pycparser==2.21
+pyflakes==3.0.1 ; python_version >= '3.6'
+pyjwt[crypto]==2.6.0 ; python_version >= '3.7'
+pylint==2.15.10
+pyparsing==3.0.9 ; python_version > '3.0'
+requests==2.28.1
+rsa==4.9 ; python_version >= '3.6'
+six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+tomli==2.0.1 ; python_version < '3.11'
+tomlkit==0.11.6 ; python_version >= '3.6'
+twitchio==2.5.0
+typing-extensions==4.4.0 ; python_version >= '3.7'
+uritemplate==4.1.1 ; python_version >= '3.6'
+urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+websockets==10.4
+wrapt==1.14.1 ; python_version < '3.11'
+yarl==1.8.2 ; python_version >= '3.7'
