--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,21 @@
 name: Python application
 
+initialise: &initialise
+  - uses: actions/checkout@v3
+  - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
+    with:
+      secrets: ${{ toJSON(secrets) }}
+
+  - name: Set up Python 3.10
+    uses: actions/setup-python@v3
+    with:
+      python-version: "3.10"
+  - name: Install dependencies
+    run: |
+      python -m pip install --upgrade pip
+      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  
+
 on:
   push
 
@@ -8,7 +24,7 @@ permissions:
 
 jobs:
   build:
-    timeout-minutes: 30
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -42,7 +58,7 @@ jobs:
         mypy .
 
   test:
-    timeout-minutes: 30
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -65,3 +81,15 @@ jobs:
       run: |
         echo "$FIREBASE_CONFIG" > .firebase_config.json
         pytest
+
+  deploy:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.ref == 'refs/heads/main'  # Only deploy if this was a push to main
+    steps:
+      << : [*initialise, {
+        name: deploying
+        , run: |
+            echo: "Deploying..."
+      }]
