--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -90,6 +90,4 @@ jobs:
     steps:
       << : [*initialise, {
         name: deploying
-        , run: |
-            echo: "Deploying..."
-      }]
+        , run: 'echo: "Deploying..."'}]
