--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,21 +1,5 @@
 name: Python application
 
-initialise: &initialise
-  - uses: actions/checkout@v3
-  - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
-    with:
-      secrets: ${{ toJSON(secrets) }}
-
-  - name: Set up Python 3.10
-    uses: actions/setup-python@v3
-    with:
-      python-version: "3.10"
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-  
-
 on:
   push
 
@@ -41,6 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install mypy
+        pip install flake8
 
     - name: Check for syntax errors or undefined names
       run: |
@@ -88,6 +73,7 @@ jobs:
     needs: [test]
     if: github.ref == 'refs/heads/main'  # Only deploy if this was a push to main
     steps:
-      << : [*initialise, {
-        name: deploying
-        , run: 'echo: "Deploying..."'}]
+    - uses: $GITHUB_ACTION_PATH/python-init@main
+    - name: deploying
+      run: |
+        echo: "Deploying..."
