--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,20 +11,9 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as environment variables
-      with:
-        secrets: ${{ toJSON(secrets) }}
-    - uses: $GITHUB_ACTION/python-init@main
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
+    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
+    - name: Install mypy and flake8
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install mypy
         pip install flake8
 
@@ -48,19 +37,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-    - uses: actions/checkout@v3
-    - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
-      with:
-        secrets: ${{ toJSON(secrets) }}
+    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
+    - name: Install pytest
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pytest
 
     - name: Test with pytest
@@ -74,7 +54,7 @@ jobs:
     needs: [test]
     if: github.ref == 'refs/heads/main'  # Only deploy if this was a push to main
     steps:
-    - uses: $GITHUB_ACTION_PATH/python-init@main
+    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
     - name: deploying
       run: |
         echo: "Deploying..."
