--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
       with:
-        secrets: ${{ toJSON(secrets) }}
+        secrets: secrets
     - name: Install mypy and flake8
       run: |
         pip install mypy
@@ -41,7 +41,7 @@ jobs:
     steps:
     - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
       with:
-        secrets: ${{ toJSON(secrets) }}
+        secrets: secrets
 
     - name: Install pytest
       run: |
@@ -60,7 +60,7 @@ jobs:
     steps:
     - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
       with:
-        secrets: ${{ toJSON(secrets) }}
+        secrets: secrets
     - name: deploying
       run: |
         echo: "Deploying..."
