--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -1,3 +1,7 @@
+inputs:
+  secrets:
+    required: true
+
 initialise:
   - uses: actions/checkout@v3
   - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
