--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -3,16 +3,18 @@ inputs:
     required: true
 
 runs:
-  - uses: actions/checkout@v3
-  - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
-    with:
-      secrets: secrets
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
+      with:
+        secrets: secrets
 
-  - name: Set up Python 3.10
-    uses: actions/setup-python@v3
-    with:
-      python-version: "3.10"
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
