--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -3,8 +3,8 @@ inputs:
     required: true
 
 runs:
-    runs-on: ubuntu-latest
-    steps:
+  using: 'composite'
+  steps:
     - uses: actions/checkout@v3
     - uses: oNaiPs/secrets-to-env-action@v1 # exports all github secrets as env variables (when used with the next 2 lines)
       with:
