--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -18,3 +18,4 @@ runs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      shell: bash
