--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
         secrets: ${{ toJSON(secrets) }}
     - name: print secrets
       run: |
-        echo "$CLIENT_ID"
+        echo "Hello!"
     - name: Install mypy and flake8
       run: |
         pip install mypy
