--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
       with:
-        secrets: ${{ secrets }}
+        secrets: ${{ toJSON(secrets) }}
 #    - name: print secrets
 #      run: |
 #        echo "Hello!"
