--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -67,4 +67,4 @@ jobs:
         secrets: ${{ toJSON(secrets) }}
     - name: deploying
       run: |
-        echo: "Deploying..."
+        echo "Deploying..."
