--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
       with:
         secrets: ${{ toJSON(secrets) }}
-#    - name: print secrets
-#      run: |
-#        echo "Hello!"
+    - name: print secrets
+      run: |
+        echo "Hello!"
     - name: Install mypy and flake8
       run: |
         pip install mypy
