--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,12 +11,9 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
-    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
+    - uses: ../actions/python-init@main
       with:
         secrets: ${{ toJSON(secrets) }}
-    - name: print secrets
-      run: |
-        echo "Hello!"
     - name: Install mypy and flake8
       run: |
         pip install mypy
