--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
 
@@ -60,7 +61,8 @@ jobs:
     needs: [test]
     if: github.ref == 'refs/heads/main'  # Only deploy if this was a push to main
     steps:
-    - uses: Ereiarrus/ComplementsBotPy/.github/actions/python-init@main
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
     - name: deploying
