moving onto actually finish CI/CD

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,8 +30,11 @@ jobs:
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
     - name: Lint with pylint
       run: |
+        pylint env_reader.py 
+        pylint main.py
         pylint ComplementsBot/bot.py
-        # pylint ComplementsBot env_reader.py main.py
+        pylint ComplementsBot/database.py
+#        pylint ComplementsBot
     - name: Typecheck with mypy
       run: |
         mypy .
