--- a/pyproject.toml
+++ b/pyproject.toml
@@ -360,6 +360,7 @@ disable = ["raw-checker-failed",
     "R0903", # Too few public methods (need at least 2) (too-few-public-methods)
     "R0913", # Too many arguments (at most 5 allowed) (too-many-arguments)
     "R0904", # Too many public methods (at most 20 allowed) (too-many-public-methods)
+    "C0302", # Too many lines in module (at most 1000 allowed) (too-many-lines)
 ]
 
 # Enable the message, report, category or checker with the given id(s). You can
