--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,16 @@ jobs:
     - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
+
+    - name: Install Docker
+      run: |
+        sudo apt-get update
+        sudo apt install apt-transport-https ca-certificates curl software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        apt update
+        apt-cache policy docker-ce
+        apt install docker-ce
     - name: Install mypy, flake8 and pylint
       run: |
         pip install mypy
@@ -67,6 +77,9 @@ jobs:
     - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
+    - name: Install cython
+      run: |
+        pip install cython
     - name: deploying
       run: |
         echo "Deploying..."
