trying out cython in docker image

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,18 +15,6 @@ jobs:
     - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
-
-    - name: Install Docker
-      run: |
-        sudo apt-get update
-        sudo apt install apt-transport-https ca-certificates curl software-properties-common
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-        sudo apt update
-        apt-cache policy docker-ce
-        sudo apt install docker-ce
-        
-        docker build -t complements_bot_py .
     - name: Install mypy, flake8 and pylint
       run: |
         pip install mypy
@@ -79,9 +67,21 @@ jobs:
     - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
-    - name: Install cython
+
+    - name: set up Docker
       run: |
+        sudo apt-get update
+        sudo apt install apt-transport-https ca-certificates curl software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        sudo apt update
+        apt-cache policy docker-ce
+        sudo apt install docker-ce
+        
         pip install cython
+        python -m cython main.py --embed
+        
+        docker build -t complements-bot-py .
     - name: deploying
       run: |
         echo "Deploying..."
