figuring out docker container

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -78,10 +78,8 @@ jobs:
         apt-cache policy docker-ce
         sudo apt install docker-ce
         
-        pip install cython
-        python -m cython main.py --embed
-        
         docker build -t complements-bot-py .
     - name: deploying
       run: |
         echo "Deploying..."
+        docker run -d complements-bot-py
