--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -82,4 +82,4 @@ jobs:
     - name: deploying
       run: |
         echo "Deploying..."
-        docker run -d complements-bot-py
+        docker run -dp 4000:4000 complements-bot-py
