--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   build:
-    timeout-minutes: 10
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -52,7 +52,7 @@ jobs:
         mypy .
 
   test:
-    timeout-minutes: 10
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -76,7 +76,7 @@ jobs:
         docker build -t complements-bot-py .
     - name: Test with pytest
       run: |
-        docker run complements-bot-py pytest
+        docker run complements-bot-py pytest /test_complements_bot
 
   deploy:
     timeout-minutes: 10
