requirements are needed

--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -4,4 +4,4 @@ FROM python:3.10-alpine
 WORKDIR /
 COPY . .
 RUN pip install mypy flake8 pylint
-#RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
