--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,4 +4,4 @@ FROM python:3.10-alpine
 WORKDIR /
 COPY . .
 RUN pip install pytest
-#RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
