--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -21,5 +21,5 @@ runs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f src/requirements.txt ]; then pip install -r src/requirements.txt; fi
       shell: bash
