--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,17 +24,17 @@ jobs:
         docker build -t complements-bot-py .
     - name: Check for syntax errors or undefined names
       run: |
-        docker run complements-bot-py flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+        docker run complements-bot-py flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     - name: Lint with flake8
       run: |
         # The GitHub editor is 127 chars wide
-        docker run complements-bot-py flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+        docker run complements-bot-py flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
     - name: Lint with pylint
       run: |
         docker run complements-bot-py pylint src
     - name: Typecheck with mypy
       run: |
-        mypy src
+        docker run complements-bot-py mypy .
 
   test:
     timeout-minutes: 15
@@ -59,7 +59,7 @@ jobs:
         docker build -t complements-bot-py .
     - name: Test with pytest
       run: |
-        docker run complements-bot-py pytest src/test_complements_bot
+        docker run complements-bot-py pytest test_complements_bot
 
   deploy:
     timeout-minutes: 10
