--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1
 
 FROM python:3.10-alpine
-WORKDIR /
+WORKDIR /src
 COPY src .
-RUN pip install pytest
 RUN pip install -r requirements.txt
+RUN pip install pytest
