added extra step to verify maknig the image doesn't wrror

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -71,6 +71,10 @@ jobs:
     - uses: ./.github/actions/python-init
       with:
         secrets: ${{ toJSON(secrets) }}
+    - name: Test docker image config
+      run: |
+        sudo bash ./docker_install.sh
+        docker build -t complements-bot-py .
     - name: deploying
       run: |
         echo "Deploying..."
