auto-format fails flake8; just ignoring E125 in pyproject.toml

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -361,6 +361,7 @@ disable = ["raw-checker-failed",
     "R0913", # Too many arguments (at most 5 allowed) (too-many-arguments)
     "R0904", # Too many public methods (at most 20 allowed) (too-many-public-methods)
     "C0302", # Too many lines in module (at most 1000 allowed) (too-many-lines)
+    "E125", # continuation line with same indent as next logical line
 ]
 
 # Enable the message, report, category or checker with the given id(s). You can
