--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -75,6 +75,26 @@ jobs:
       run: |
         sudo bash ./install_docker.sh
         bash ./docker_build.sh
-    - name: deploying
-      run: |
-        echo "Deploying..."
+#    - name: deploying
+#      run: |
+#        echo "Deploying..."
+
+    - name: Copy repository contents via scp
+      uses: appleboy/scp-action@master
+      env:
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
+      with:
+        source: "."
+        target: ${{ secrets.DEPLOY_TARGET_LOCATION }}
+
+    - name: Executing remote command
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
+        script: ls
