--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,7 +64,7 @@ jobs:
   deploy:
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    needs: [test]
+#    needs: [test]
     if: github.ref == 'refs/heads/main'  # Only deploy if this was a push to main
     steps:
     - uses: actions/checkout@v3
