--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -95,9 +95,9 @@ jobs:
         PORT: ${{ secrets.VPS_PORT }}
         KEY: ${{ secrets.SSH_KEY }}
 #        script: ls
-        script:
-          chmod +x ./docker_build.sh; \
-          ./docker_build.sh; \
-          chmod +x ./docker_run.sh; \
+        script: |
+          chmod +x ./docker_build.sh
+          ./docker_build.sh
+          chmod +x ./docker_run.sh
           ./docker_run.sh
 
