--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -96,6 +96,8 @@ jobs:
         KEY: ${{ secrets.SSH_KEY }}
 #        script: ls
         script: |
+          pwd
+          ls -la
           chmod +x ./docker_build.sh
           ./docker_build.sh
           chmod +x ./docker_run.sh
