--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -102,9 +102,9 @@ jobs:
         script: |
           cd ${{ secrets.DEPLOY_TARGET_LOCATION }}
           echo "$FIREBASE_CONFIG" > src/.firebase_config.json
-          echo "TMI_TOKEN=$TMI_TOKEN" > src/.env
-          echo "DATABASE_URL=$DATABASE_URL" >> src/.env
-          echo "CLIENT_SECRET=$CLIENT_SECRET" >> src/.env
+          echo "TMI_TOKEN=${{ secrets.TMI_TOKEN }}" > src/.env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> src/.env
+          echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> src/.env
           
           chmod +x ./docker_build.sh
           ./docker_build.sh
