--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -107,7 +107,5 @@ jobs:
           echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> src/.env
           
           chmod +x ./docker_build.sh
-          ./docker_build.sh
-          chmod +x ./docker_run.sh
-          ./docker_run.sh
-
+          chmod +x ./docker_run.sh          
+          ./docker_run.sh $(./docker_build.sh)
